--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ button {
 
 }
 
+
 .button-2 {
     background-color: black;
 }
@@ -146,10 +147,13 @@ button:hover {
 
 /* Standard Curriculum Section Design */
 
-.standard-curriculum {
+.main-curriculum-section {
     background-image: url("./assets/bg.png");
     background-repeat: no-repeat;
     background-size: contain;
+}
+
+.standard-curriculum {
     max-width: 1300rem;
     margin: 120rem auto 0;
 }
@@ -176,17 +180,17 @@ button:hover {
 
 }
 
-.card-1{
+.card-1 {
     background: -webkit-linear-gradient(90deg, rgba(229, 233, 246, 0.502) 0%, rgba(92, 94, 230, 0.217) 100%);
 
 }
 
-.card-2{
+.card-2 {
     background: -webkit-linear-gradient(90deg, rgba(229, 233, 246, 0.502) 0%, rgba(134, 241, 120, 0.473) 100%);
 
 }
 
-.card-3{
+.card-3 {
     background: -webkit-linear-gradient(90deg, rgba(229, 233, 246, 0.502) 0%, rgba(109, 53, 212, 0.292) 100%);
 
 }
@@ -205,23 +209,26 @@ button:hover {
     margin-bottom: 30rem;
 
 }
+
 .curriculum-card a {
     font-size: 16rem;
     margin-bottom: 30rem;
     text-decoration: none;
 }
 
-.curriculum-card a:hover{
+.curriculum-card a:hover {
     color: black;
 }
-.card-2 a{
+
+.card-2 a {
     color: orange;
 }
-.card-3 a{
+
+.card-3 a {
     color: red;
 }
 
-.curriculum-arrow{
+.curriculum-arrow {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -229,8 +236,8 @@ button:hover {
     margin-bottom: 80rem;
     gap: 10rem;
 }
- 
-.curriculum-arrow i{
+
+.curriculum-arrow i {
     background-color: orange;
     font-size: 20rem;
     color: white;
@@ -238,15 +245,181 @@ button:hover {
     border-radius: 60%;
 }
 
-.curriculum-arrow i:hover{
+.curriculum-arrow i:hover {
     background-color: gray;
 }
 
 
+/* Our stories section */
+
+
+/* Story card 1 */
+
+.story-main-section {
+    background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0), rgba(208, 213, 49, 0.438)), url("./assets/bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.story-main-section {
+    max-width: 100vw;
+}
+
+.story-container {
+    max-width: 1300rem;
+    margin: 0 auto;
+}
+
+.story-container h1 {
+    font-size: 40rem;
+    text-align: center;
+    margin-top: 100rem;
+    margin-bottom: 60rem;
+}
+
+.story-content {
+    display: flex;
+    justify-content: space-between;
+}
+
+.story-card {
+    border-radius: 20rem;
+}
+
+.story-card-1 {
+    max-width: 530rem;
+}
+
+.story-card-1 img {
+    max-width: 530rem;
+    border-top-right-radius: 20rem;
+    border-top-left-radius: 20rem;
+}
+
+.story-card-1 h3 {
+    font-size: 24rem;
+    padding-top: 40rem;
+    padding-bottom: 40rem;
+    /* width: 480rem; */
+}
+
+.story-card-1 p {
+    font-size: 16rem;
+    line-height: 2;
+    /* width: 480rem; */
+}
+
+.story-card-1-textContent {
+    background-color: white;
+    padding: 30rem 50rem;
+    border-bottom-right-radius: 20rem;
+    border-bottom-left-radius: 20rem;
+}
+
+.innertext-content {
+    width: 200rem;
+    height: 40rem;
+    background-color: skyblue;
+    border-radius: 40rem;
+    position: absolute;
+    margin: auto 0;
+    align-content: center;
+}
+
+.innertext-content-1 {
+    margin-left: 60rem;
+    margin-top: 310rem;
+}
+
+.innertext-content-grid {
+    margin-left: 30rem;
+    margin-top: 155rem;
+    width: 140rem;
+    height: 40rem;
+}
+
+.innertext-content-grid-1 {
+    background-color: orange;
+}
+
+.innertext-content-grid-2 {
+    background-color: blueviolet;
+}
+
+.innertext-content-grid-3 {
+    background-color: rgba(190, 145, 113, 0.943);
+}
+
+.innertext-content-grid-4 {
+    background-color: rgb(124, 232, 66);
+}
+
+
+.innertext-content p {
+    color: white;
+    text-align: center;
+
+}
+
+
+/* Right Side story cards design */
+
+.rightSide-storyCard {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40rem;
+}
+
+/* Story card 2 */
+
+.story-card-2 {
+    width: 280rem;
+    margin: 10rem;
+    border-radius: 20rem;
+
+}
+
+.story-card-2 img {
+    max-width: 280rem;
+    border-top-right-radius: 20rem;
+    border-top-left-radius: 20rem;
+}
+
+.story-card-2 h3 {
+    font-size: 17rem;
+    padding-top: 20rem;
+    padding-bottom: 20rem;
+    /* width: 480rem; */
+}
+
+.story-card-2 p {
+    font-size: 13rem;
+    line-height: 2;
+    /* width: 480rem; */
+}
+
+.story-card-2-textContent {
+    background-color: white;
+    padding: 10rem 20rem;
+    border-bottom-right-radius: 20rem;
+    border-bottom-left-radius: 20rem;
+}
 
 
 
+.innertext-content p {
+    color: white;
+    text-align: center;
 
+}
+
+.story-container button {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 70rem;
+}
 
 
 
@@ -254,7 +427,7 @@ button:hover {
 
 /* Responsive design for mobile view */
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 576px) {
     header {
         max-width: auto;
         margin: 20rem 20rem;
@@ -329,7 +502,7 @@ button:hover {
         max-width: auto;
         margin: auto;
     }
-    
+
     .standard-curriculum h1 {
         margin-top: 80rem;
         margin-bottom: -30rem;
@@ -337,13 +510,13 @@ button:hover {
         font-weight: 800;
         text-align: center;
     }
-    
+
     .curriculum-card-container {
         display: flex;
         flex-direction: column;
     }
-    
-    
+
+
     .curriculum-card {
         width: auto;
         text-align: center;
@@ -353,26 +526,90 @@ button:hover {
         padding: 50rem;
     }
 
-    .card-1{
+    .card-1 {
         background: -webkit-linear-gradient(90deg, rgba(229, 233, 246, 0.502) 0%, rgba(92, 94, 230, 0.217) 100%);
-    
+
     }
-    
-    .card-2{
+
+    .card-2 {
         background: -webkit-linear-gradient(90deg, rgba(229, 233, 246, 0.502) 0%, rgba(134, 241, 120, 0.473) 100%);
-    
+
     }
-    
-    .card-3{
+
+    .card-3 {
         background: -webkit-linear-gradient(90deg, rgba(229, 233, 246, 0.502) 0%, rgba(109, 53, 212, 0.292) 100%);
-    
+
     }
-    
+
     .curriculum-arrow {
         display: none;
     }
-    
-    
-    
+
+
+    /* Our stories section for mobile screen */
+
+    /* Left side card for mobile */
+    .story-card-1{
+        display: none;
+    }
+
+    /* Right side card for mobile */
+    .rightSide-storyCard {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 40rem;
+    }
+
+    /* Story card 2 */
+
+.story-card-2 {
+    width: 180rem;
+    margin: 10rem;
+    border-radius: 20rem;
+
+}
+
+.story-card-2 img {
+    max-width: 180rem;
+    border-top-right-radius: 20rem;
+    border-top-left-radius: 20rem;
+}
+
+.story-card-2 h3 {
+    font-size: 17rem;
+    padding-top: 20rem;
+    padding-bottom: 20rem;
+    /* width: 480rem; */
+}
+
+.story-card-2 p {
+    font-size: 13rem;
+    line-height: 2;
+    /* width: 480rem; */
+}
+
+.story-card-2-textContent {
+    background-color: white;
+    padding: 10rem 20rem;
+    border-bottom-right-radius: 20rem;
+    border-bottom-left-radius: 20rem;
+}
+
+
+
+.innertext-content p {
+    color: white;
+    text-align: center;
+
+}
+
+.story-container button {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 70rem;
+}
+
 
 }
