--- a/style.css
+++ b/style.css
@@ -257,7 +257,6 @@ button:hover {
 
 .story-main-section {
     background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0), rgba(208, 213, 49, 0.438)), url("./assets/bg.png");
-    background-repeat: no-repeat;
     background-size: cover;
 }
 
@@ -280,10 +279,6 @@ button:hover {
 .story-content {
     display: flex;
     justify-content: space-between;
-}
-
-.story-card {
-    border-radius: 20rem;
 }
 
 .story-card-1 {
@@ -367,16 +362,14 @@ button:hover {
 .rightSide-storyCard {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 40rem;
+    gap: 50rem;
 }
 
 /* Story card 2 */
 
 .story-card-2 {
     width: 280rem;
-    margin: 10rem;
     border-radius: 20rem;
-
 }
 
 .story-card-2 img {
@@ -387,8 +380,7 @@ button:hover {
 
 .story-card-2 h3 {
     font-size: 17rem;
-    padding-top: 20rem;
-    padding-bottom: 20rem;
+    padding:30rem 15rem;
     /* width: 480rem; */
 }
 
@@ -400,7 +392,6 @@ button:hover {
 
 .story-card-2-textContent {
     background-color: white;
-    padding: 10rem 20rem;
     border-bottom-right-radius: 20rem;
     border-bottom-left-radius: 20rem;
 }
@@ -414,11 +405,15 @@ button:hover {
 }
 
 .story-container button {
-    display:flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
     margin-top: 70rem;
+}
+
+.story-button{
+    background-image: url("./assets/bg.png");
 }
 
 
@@ -549,7 +544,7 @@ button:hover {
     /* Our stories section for mobile screen */
 
     /* Left side card for mobile */
-    .story-card-1{
+    .story-card-1 {
         display: none;
     }
 
@@ -557,59 +552,65 @@ button:hover {
     .rightSide-storyCard {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        gap: 40rem;
+        gap: 10rem;
     }
 
     /* Story card 2 */
 
-.story-card-2 {
-    width: 180rem;
-    margin: 10rem;
-    border-radius: 20rem;
+    .story-container h1{
+        font-size: 30rem;
+        margin-top: 40rem;
+    }
 
-}
+    .story-card-2 { 
+        width: 180rem;
+        margin: 10rem;
+        border-radius: 20rem;
 
-.story-card-2 img {
-    max-width: 180rem;
-    border-top-right-radius: 20rem;
-    border-top-left-radius: 20rem;
-}
+    }
 
-.story-card-2 h3 {
-    font-size: 17rem;
-    padding-top: 20rem;
-    padding-bottom: 20rem;
-    /* width: 480rem; */
-}
-
-.story-card-2 p {
-    font-size: 13rem;
-    line-height: 2;
-    /* width: 480rem; */
-}
-
-.story-card-2-textContent {
-    background-color: white;
-    padding: 10rem 20rem;
-    border-bottom-right-radius: 20rem;
-    border-bottom-left-radius: 20rem;
-}
+    .story-card-2 img {
+        max-width: 180rem;
+        border-top-right-radius: 20rem;
+        border-top-left-radius: 20rem;
+    }
 
 
+    .story-container button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        margin-top: 30rem;
+    }
 
-.innertext-content p {
-    color: white;
-    text-align: center;
+    .story-card-2 h3 {
+        font-size: 17rem;
+        padding:30rem 20rem;
+    }
 
-}
 
-.story-container button {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    margin-top: 70rem;
-}
-
+    .innertext-content-grid {
+        margin-left: 10rem;
+        margin-top: 90rem;
+        width: 140rem;
+        height: 40rem;
+    }
+    
+    .innertext-content-grid-1 {
+        background-color: orange;
+    }
+    
+    .innertext-content-grid-2 {
+        background-color: blueviolet;
+    }
+    
+    .innertext-content-grid-3 {
+        background-color: rgba(190, 145, 113, 0.943);
+    }
+    
+    .innertext-content-grid-4 {
+        background-color: rgb(124, 232, 66);
+    }
 
 }
