--- a/style.css
+++ b/style.css
@@ -381,13 +381,11 @@ button:hover {
 .story-card-2 h3 {
     font-size: 17rem;
     padding:30rem 15rem;
-    /* width: 480rem; */
 }
 
 .story-card-2 p {
     font-size: 13rem;
     line-height: 2;
-    /* width: 480rem; */
 }
 
 .story-card-2-textContent {
@@ -543,74 +541,122 @@ button:hover {
 
     /* Our stories section for mobile screen */
 
-    /* Left side card for mobile */
-    .story-card-1 {
-        display: none;
-    }
+    /* Story card 1 */
 
-    /* Right side card for mobile */
-    .rightSide-storyCard {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 10rem;
-    }
-
-    /* Story card 2 */
-
-    .story-container h1{
-        font-size: 30rem;
-        margin-top: 40rem;
-    }
-
-    .story-card-2 { 
-        width: 180rem;
-        margin: 10rem;
-        border-radius: 20rem;
-
-    }
-
-    .story-card-2 img {
-        max-width: 180rem;
-        border-top-right-radius: 20rem;
-        border-top-left-radius: 20rem;
-    }
+.story-main-section {
+    background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0), rgba(208, 213, 49, 0.438)), url("./assets/bg.png");
+    background-size: cover;
+}
 
 
-    .story-container button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 0 auto;
-        margin-top: 30rem;
-    }
+.story-main-section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-    .story-card-2 h3 {
-        font-size: 17rem;
-        padding:30rem 20rem;
-    }
+.story-container {
+    max-width: auto;
+    margin:auto;
+}
+
+.story-container h1 {
+    font-size: 30rem;
+    text-align: center;
+    margin-top: 60rem;
+    margin-bottom: 30rem;
+}
+
+.story-card-1 {
+    display: none;
+}
+
+.innertext-content {
+    width: 140rem;
+    height: 40rem;
+    background-color: skyblue;
+    border-radius: 40rem;
+    position: absolute;
+    margin: auto 0;
+    align-content: center;
+}
 
 
-    .innertext-content-grid {
-        margin-left: 10rem;
-        margin-top: 90rem;
-        width: 140rem;
-        height: 40rem;
-    }
+.innertext-content-grid {
+    margin-left: 10rem;
+    margin-top: 90rem;
+    width: 130rem;
+    height: 40rem;
+}
+
+
+
+
+/* Right Side story cards design */
+
+.rightSide-storyCard {
+    gap: 10rem;
+}
+
+/* Story card 2 */
+
+.story-card-2 {
+    width: 180rem;
+    border-radius: 20rem;
+}
+
+.story-card-2 img {
+    max-width: 180rem;
+    border-top-right-radius: 20rem;
+    border-top-left-radius: 20rem;
+}
+
+.story-card-2 h3 {
+    font-size: 17rem;
+    padding:25rem 15rem;
+    /* width: 480rem; */
+}
+
+.story-card-2 p {
+    font-size: 13rem;
+    line-height: 2;
+    /* width: 480rem; */
+}
+
+.story-card-2-textContent {
+    background-color: white;
+    border-bottom-right-radius: 20rem;
+    border-bottom-left-radius: 20rem;
+}
+
+
+
+.innertext-content p {
+    color: white;
+    text-align: center;
+
+}
+
+.story-container button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 70rem;
+}
+
+.story-button{
+    background-image: url("./assets/bg.png");
+}
+
+.story-container button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 10rem;
+}
+
     
-    .innertext-content-grid-1 {
-        background-color: orange;
-    }
-    
-    .innertext-content-grid-2 {
-        background-color: blueviolet;
-    }
-    
-    .innertext-content-grid-3 {
-        background-color: rgba(190, 145, 113, 0.943);
-    }
-    
-    .innertext-content-grid-4 {
-        background-color: rgb(124, 232, 66);
-    }
 
 }
