--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ html {
 }
 
 header {
-    max-width: 1300rem;
-    margin: 20rem auto;
+    max-width: 100vw;
+    margin: 20rem 190rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -52,7 +52,7 @@ button {
 
 .logo h2 {
     font-size: 30rem;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     color: rgb(110, 63, 153);
 }
 
@@ -257,11 +257,12 @@ button:hover {
 
 .story-main-section {
     background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0), rgba(208, 213, 49, 0.438)), url("./assets/bg.png");
-    background-size: cover;
+    /* background-size: cover; */
 }
 
 .story-main-section {
     max-width: 100vw;
+    padding-bottom: 40rem;
 }
 
 .story-container {
@@ -406,13 +407,83 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 auto;
-    margin-top: 70rem;
+    margin: 70rem auto;
 }
 
 .story-button{
     background-image: url("./assets/bg.png");
 }
+
+
+
+/* Footer section start from here */
+
+footer{
+    max-width: 100vw;
+    background-color: rgba(111, 111, 255, 0.868);
+}
+
+.footer-logo{
+    display: flex;
+    align-items: center;
+}
+
+.footer-innerSection{
+    display: flex;
+    justify-content: space-between;
+    max-width: 1300rem;
+    margin: 0 auto;
+    padding: 140rem 0;
+}
+
+.footer-logoContent h2{
+    font-size: 28rem;
+    color: aquamarine;
+    margin-left: 4rem;
+}
+
+
+.footer-logoContent p{
+    font-size: 16rem;
+    margin-top: 40rem;
+    font-size: 16rem;
+    /* line-height: 2; */
+    color: rgba(255, 228, 196, 0.596);
+    width: 320rem;
+}
+
+.footer-aboutContent{
+    display: flex;
+    flex-direction: column;
+}
+
+
+.footer-aboutContent h2{
+    font-size: 18rem;
+    color: azure;
+    margin-bottom: 40rem;
+}
+
+.footer-aboutContent a{
+    font-size: 18rem;
+    color: bisque;
+    text-decoration: none;
+    margin-bottom: 25rem;
+}
+
+.footer-keepTouchContent h2{
+    font-size: 20rem;
+    color: azure;
+    margin-bottom: 40rem;
+}
+
+.footer-keepTouchContent img{
+    margin-right: 20rem;
+}
+
+
+
+
 
 
 
@@ -584,15 +655,32 @@ button:hover {
 
 .innertext-content-grid {
     margin-left: 10rem;
-    margin-top: 90rem;
-    width: 130rem;
-    height: 40rem;
+    margin-top: 65rem;
+    width: 120rem;
+    /* height: 40rem; */
+}
+
+.innertext-content-grid-1 {
+    background-color: orange;
+}
+
+.innertext-content-grid-2 {
+    background-color: blueviolet;
+}
+
+.innertext-content-grid-3 {
+    background-color: rgba(190, 145, 113, 0.943);
+}
+
+.innertext-content-grid-4 {
+    background-color: rgb(124, 232, 66);
 }
 
 
 
 
-/* Right Side story cards design */
+
+/* Right Side story cards design for mobile */
 
 .rightSide-storyCard {
     gap: 10rem;
@@ -601,18 +689,18 @@ button:hover {
 /* Story card 2 */
 
 .story-card-2 {
-    width: 180rem;
+    width: 140rem;
     border-radius: 20rem;
 }
 
 .story-card-2 img {
-    max-width: 180rem;
+    max-width: 140rem;
     border-top-right-radius: 20rem;
     border-top-left-radius: 20rem;
 }
 
 .story-card-2 h3 {
-    font-size: 17rem;
+    font-size: 13rem;
     padding:25rem 15rem;
     /* width: 480rem; */
 }
@@ -624,6 +712,7 @@ button:hover {
 }
 
 .story-card-2-textContent {
+   
     background-color: white;
     border-bottom-right-radius: 20rem;
     border-bottom-left-radius: 20rem;
@@ -632,6 +721,7 @@ button:hover {
 
 
 .innertext-content p {
+    font-size: 12rem;
     color: white;
     text-align: center;
 
@@ -657,6 +747,21 @@ button:hover {
     margin-top: 10rem;
 }
 
-    
 
+
+/* Footer section for mobile screen */
+
+.footer-innerSection{
+    flex-direction: column;
+    margin-left: 40rem;
+}
+
+.footer-aboutContent h2{
+    margin-top: 30rem;
+    margin-bottom: 20rem;
+}
+
+.footer-keepTouchContent h2{
+    margin-top: 30rem;
+}
 }
