--- a/style.css
+++ b/style.css
@@ -420,7 +420,7 @@ button:hover {
 
 footer{
     max-width: 100vw;
-    background-color: rgba(111, 111, 255, 0.868);
+    background-color: rgba(103, 138, 255, 0.973);
 }
 
 .footer-logo{
@@ -433,7 +433,8 @@ footer{
     justify-content: space-between;
     max-width: 1300rem;
     margin: 0 auto;
-    padding: 140rem 0;
+    padding-top: 10rem;
+    padding-bottom: 100rem;
 }
 
 .footer-logoContent h2{
@@ -445,7 +446,7 @@ footer{
 
 .footer-logoContent p{
     font-size: 16rem;
-    margin-top: 40rem;
+    margin-top: 20rem;
     font-size: 16rem;
     /* line-height: 2; */
     color: rgba(255, 228, 196, 0.596);
@@ -481,7 +482,10 @@ footer{
     margin-right: 20rem;
 }
 
-
+.marquee{
+    font-size: 20rem;
+    color: rgb(242, 255, 0);
+}
 
 
 
@@ -496,6 +500,10 @@ footer{
         max-width: auto;
         margin: 20rem 20rem;
 
+    }
+
+    .logo h2{
+        font-size: 20rem;
     }
 
     .logo img {
