--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ button:hover {
 }
 
 .card-1 {
-    background: -webkit-linear-gradient(90deg, rgba(229, 233, 246, 0.502) 0%, rgba(92, 94, 230, 0.217) 100%);
+    background: -webkit-linear-gradient(90deg, rgba(229, 233, 246, 0.9) 0%, rgba(92, 94, 230, 0.217) 100%);
 
 }
 
@@ -212,6 +212,7 @@ button:hover {
 
 .curriculum-card a {
     font-size: 16rem;
+    font-weight: bold;
     margin-bottom: 30rem;
     text-decoration: none;
 }
@@ -381,7 +382,7 @@ button:hover {
 
 .story-card-2 h3 {
     font-size: 17rem;
-    padding:30rem 15rem;
+    padding: 30rem 15rem;
 }
 
 .story-card-2 p {
@@ -410,7 +411,7 @@ button:hover {
     margin: 70rem auto;
 }
 
-.story-button{
+.story-button {
     background-image: url("./assets/bg.png");
 }
 
@@ -418,17 +419,17 @@ button:hover {
 
 /* Footer section start from here */
 
-footer{
+footer {
     max-width: 100vw;
     background-color: rgba(103, 138, 255, 0.973);
 }
 
-.footer-logo{
+.footer-logo {
     display: flex;
     align-items: center;
 }
 
-.footer-innerSection{
+.footer-innerSection {
     display: flex;
     justify-content: space-between;
     max-width: 1300rem;
@@ -437,14 +438,14 @@ footer{
     padding-bottom: 100rem;
 }
 
-.footer-logoContent h2{
+.footer-logoContent h2 {
     font-size: 28rem;
     color: aquamarine;
     margin-left: 4rem;
 }
 
 
-.footer-logoContent p{
+.footer-logoContent p {
     font-size: 16rem;
     margin-top: 20rem;
     font-size: 16rem;
@@ -453,36 +454,36 @@ footer{
     width: 320rem;
 }
 
-.footer-aboutContent{
+.footer-aboutContent {
     display: flex;
     flex-direction: column;
 }
 
 
-.footer-aboutContent h2{
+.footer-aboutContent h2 {
     font-size: 18rem;
     color: azure;
     margin-bottom: 40rem;
 }
 
-.footer-aboutContent a{
+.footer-aboutContent a {
     font-size: 18rem;
     color: bisque;
     text-decoration: none;
     margin-bottom: 25rem;
 }
 
-.footer-keepTouchContent h2{
+.footer-keepTouchContent h2 {
     font-size: 20rem;
     color: azure;
     margin-bottom: 40rem;
 }
 
-.footer-keepTouchContent img{
+.footer-keepTouchContent img {
     margin-right: 20rem;
 }
 
-.marquee{
+.marquee {
     font-size: 20rem;
     color: rgb(242, 255, 0);
 }
@@ -502,8 +503,8 @@ footer{
 
     }
 
-    .logo h2{
-        font-size: 20rem;
+    .logo h2 {
+        display: none;
     }
 
     .logo img {
@@ -619,154 +620,156 @@ footer{
 
     /* Story card 1 */
 
-.story-main-section {
-    background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0), rgba(208, 213, 49, 0.438)), url("./assets/bg.png");
-    background-size: cover;
-}
+    .story-main-section {
+        background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0), rgba(208, 213, 49, 0.438)), url("./assets/bg.png");
+        background-size: cover;
+    }
 
 
-.story-main-section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+    .story-main-section {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 
-.story-container {
-    max-width: auto;
-    margin:auto;
-}
+    .story-container {
+        max-width: auto;
+        margin: auto;
+    }
 
-.story-container h1 {
-    font-size: 30rem;
-    text-align: center;
-    margin-top: 60rem;
-    margin-bottom: 30rem;
-}
+    .story-container h1 {
+        font-size: 30rem;
+        text-align: center;
+        margin-top: 60rem;
+        margin-bottom: 30rem;
+    }
 
-.story-card-1 {
-    display: none;
-}
+    .story-card-1 {
+        display: none;
+    }
 
-.innertext-content {
-    width: 140rem;
-    height: 40rem;
-    background-color: skyblue;
-    border-radius: 40rem;
-    position: absolute;
-    margin: auto 0;
-    align-content: center;
-}
-
-
-.innertext-content-grid {
-    margin-left: 10rem;
-    margin-top: 65rem;
-    width: 120rem;
-    /* height: 40rem; */
-}
-
-.innertext-content-grid-1 {
-    background-color: orange;
-}
-
-.innertext-content-grid-2 {
-    background-color: blueviolet;
-}
-
-.innertext-content-grid-3 {
-    background-color: rgba(190, 145, 113, 0.943);
-}
-
-.innertext-content-grid-4 {
-    background-color: rgb(124, 232, 66);
-}
+    .innertext-content {
+        width: 140rem;
+        height: 40rem;
+        background-color: skyblue;
+        border-radius: 40rem;
+        position: absolute;
+        margin: auto 0;
+        align-content: center;
+    }
 
 
+    .innertext-content-grid {
+        margin-left: 10rem;
+        margin-top: 65rem;
+        width: 120rem;
+        /* height: 40rem; */
+    }
 
+    .innertext-content-grid-1 {
+        background-color: orange;
+    }
 
+    .innertext-content-grid-2 {
+        background-color: blueviolet;
+    }
 
-/* Right Side story cards design for mobile */
+    .innertext-content-grid-3 {
+        background-color: rgba(190, 145, 113, 0.943);
+    }
 
-.rightSide-storyCard {
-    gap: 10rem;
-}
-
-/* Story card 2 */
-
-.story-card-2 {
-    width: 140rem;
-    border-radius: 20rem;
-}
-
-.story-card-2 img {
-    max-width: 140rem;
-    border-top-right-radius: 20rem;
-    border-top-left-radius: 20rem;
-}
-
-.story-card-2 h3 {
-    font-size: 13rem;
-    padding:25rem 15rem;
-    /* width: 480rem; */
-}
-
-.story-card-2 p {
-    font-size: 13rem;
-    line-height: 2;
-    /* width: 480rem; */
-}
-
-.story-card-2-textContent {
-   
-    background-color: white;
-    border-bottom-right-radius: 20rem;
-    border-bottom-left-radius: 20rem;
-}
+    .innertext-content-grid-4 {
+        background-color: rgb(124, 232, 66);
+    }
 
 
 
-.innertext-content p {
-    font-size: 12rem;
-    color: white;
-    text-align: center;
-
-}
-
-.story-container button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    margin-top: 70rem;
-}
-
-.story-button{
-    background-image: url("./assets/bg.png");
-}
-
-.story-container button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    margin-top: 10rem;
-}
 
 
+    /* Right Side story cards design for mobile */
 
-/* Footer section for mobile screen */
+    .rightSide-storyCard {
+        gap: 10rem;
+    }
 
-.footer-innerSection{
-    flex-direction: column;
-    margin-left: 40rem;
-}
+    /* Story card 2 */
 
-.footer-aboutContent h2{
-    margin-top: 30rem;
-    margin-bottom: 20rem;
-}
+    .story-card-2 {
+        width: 140rem;
+        border-radius: 20rem;
+    }
 
-.footer-keepTouchContent h2{
-    margin-top: 30rem;
-}
+    .story-card-2 img {
+        max-width: 140rem;
+        border-top-right-radius: 20rem;
+        border-top-left-radius: 20rem;
+    }
+
+    .story-card-2 h3 {
+        font-size: 13rem;
+        padding: 25rem 15rem;
+        /* width: 480rem; */
+    }
+
+    .story-card-2 p {
+        font-size: 13rem;
+        line-height: 2;
+        /* width: 480rem; */
+    }
+
+    .story-card-2-textContent {
+
+        background-color: white;
+        border-bottom-right-radius: 20rem;
+        border-bottom-left-radius: 20rem;
+    }
+
+
+
+    .innertext-content p {
+        font-size: 12rem;
+        color: white;
+        text-align: center;
+
+    }
+
+    .story-container button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        margin-top: 70rem;
+    }
+
+    .story-button {
+        background-image: url("./assets/bg.png");
+    }
+
+    .story-container button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        margin-top: 10rem;
+    }
+
+
+
+    /* Footer section for mobile screen */
+
+    .footer-innerSection {
+        flex-direction: column;
+        margin-left: 40rem;
+    }
+
+    .footer-aboutContent h2 {
+        margin-top: 30rem;
+        margin-bottom: 20rem;
+    }
+
+    .footer-keepTouchContent h2 {
+        margin-top: 30rem;
+    }
+
+
 }
